syntax = "proto3"; //请在非空非注释的第一行指定当前文件使用的是proto3的语法,默认proto2
package grpc; //package与java_package有些不同，java_package是定义编译生成的java文件所在的目录，而package是对应的java类的命名空间
option java_package = "com.forrest.grpc.core";
option java_outer_classname = "HelloWorldServiceProto"; //要生成Java类的名称
option java_multiple_files = true; //编译后会生成多个Message类，并没有被包含在 HelloWorldServiceProto.java文件中,反之,生成单一HelloWorldServiceProto.java文件
//服务端接口类
service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply) {} //服务端接口方法
}
//请求参数 基于序号的协议字段映射，所以字段可以乱序，可缺段
message HelloRequest {
  string name = 1;
  string sex = 2;
}
//响应参数
message HelloReply {
  string message = 1;
}